--- a/group.html
+++ b/group.html
@@ -230,7 +230,38 @@
 
       <h2><b>Undergraduate Students</b></h2><br>
       <p>
-        No at the present time
+       <!-- Graduate Student: Clover Kagle -->
+      <div class="row">
+
+        <!-- Photo and name -->
+        <!--Placeholder, getting picture soon-->
+        <div class="col-4">
+          <h3>Clover Kagle</h3>
+          <img style="width: 250px; height: 250px;" title="Clover Kagle" alt="Clover Kagle" src="group/nophoto.png">
+        </div>
+
+        <!-- Profile -->
+        <div class="col-8">
+          <b>Mailing address:</b><br>
+         1185 Sweet Home Rd.<br>
+         Unit 600-B<br>
+         Amherst, New York 14228, USA<br><br>
+
+          <b>Tel.: </b> +1 (607)-333-6673<br>
+          <b>Email: </b><a href="mailto:">aekagle@buffalo.edu</a><br>
+          <br>
+
+        </div> <!-- Profile -->
+      </div> <!-- row -->
+
+      <!-- Bio & Research -->
+      <div class="row">
+        <div class="col-12">
+          <p>			
+           Clover was born in Ithaca New York in 2002. She is in her junior year, currently enrolled as a chemistry major at the University at Buffalo, 
+           with a minor in environmental studies.
+          </p>
+        </div> 
       </p>
 
 
