Edited Bio and Tags

--- a/group.html
+++ b/group.html
@@ -223,14 +223,14 @@
 	    For the latter, his focus is on non-adiabatic molecular dynamics within the organic semiconductors.
           </p>
         </div> 
-      </div> <!-- Bio & Research -->
+      </div> 
       <br>
       <!-- END OF: Graduate Student: Qingxin Zhang -->
 
 
       <h2><b>Undergraduate Students</b></h2><br>
       <p>
-       <!-- Graduate Student: Clover Kagle -->
+       <!-- Underaduate Student: Clover Kagle -->
       <div class="row">
 
         <!-- Photo and name -->
@@ -263,7 +263,9 @@
           </p>
         </div> 
       </p>
-
+    </div> 
+  </div> 
+  <br>
 
       <h2><b>Visitors</b></h2><br>
       <p>
