--- a/group.html
+++ b/group.html
@@ -230,7 +230,7 @@
 
       <h2><b>Undergraduate Students</b></h2><br>
       <p>
-       <!-- Underaduate Student: Clover Kagle -->
+       <!-- Undegraduate Student: Clover Kagle -->
       <div class="row">
 
         <!-- Photo and name -->
